# tfa_me_ha_local

./: pyproject.toml  readme.md
.github/workflows/: release.yml
dist_old/: tfa_me_ha_local-1.0.1-py3-none-any.whl
src/tfa_me_ha_local/: client.py  const.py  history.py
src/tfa_me_ha_local.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_tfa_me_ha_local.py
tfa_me_ha_local.egg-info/: PKG-INFO  SOURCES.txt
